# mobaobubao

./: README.md
mojiji/: index.html  package-lock.json  package.json
mojiji-api/: .env  .env.example  pyproject.toml
mojiji-api/app/: config.py  main.py
mojiji-api/app/routers/: copybooks.py  glyphs.py
mojiji-api/app/services/: segmentation.py  storage.py
mojiji-api/mojiji_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mojiji-api/prisma/: mojiji.db  schema.prisma
mojiji/src/: App.tsx  index.css
mojiji/src/components/layout/: Toolbar.tsx
mojiji/src/components/ui/: CharCell.tsx  PaperGrid.tsx  PreviewPanel.tsx
mojiji/src/hooks/: useResizablePanel.ts
mojiji/src/lib/: api.ts  grid.ts  mockData.ts
mojiji/src/pages/: ComposePage.tsx  PracticePage.tsx  UploadPage.tsx
mojiji/src/store/: compositionStore.ts
mojiji/src/types/: index.ts  practice.ts
