[project]
name = "mojiji-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "prisma>=0.15.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
]

[tool.setuptools]
packages = ["app"]
